--- a/templates/default/vhost.conf.erb
+++ b/templates/default/vhost.conf.erb
@@ -1,4 +1,4 @@
-<VirtualHost *:80>
+<VirtualHost *:8080>
     ServerName <%= @params[:server_name] %>
     ServerAlias *
 
@@ -8,25 +8,19 @@
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
     WSGIPassAuthorization On
-    <Directory <%= @params[:docroot] %>>
-        <Files wsgi.py>
-        Order deny,allow
-        Require all granted
-        </Files>
-    </Directory>
 
-    Alias /media/ /home/<%= @params[:user] %>/media/
-    Alias /static/ <%= @params[:docroot] %>/static/
+    <IfModule mod_rpaf.c>
+        RPAFenable On
+        RPAFsethostname On
+        RPAFproxy_ips 127.0.0.1
+    </IfModule>
 
-    <Directory <%= @params[:docroot] %>/static>
-        Require all granted
-    </Directory>
-    <Directory /home/<%= @params[:user] %>/media>
+    <Directory />
         Require all granted
     </Directory>
 
 </VirtualHost>
 
-WSGIDaemonProcess lgcug-ckan python-path=<%= @params[:docroot] %>:/home/<%= @params[:user] %>/env/lib<%= @params[:python] %>/site-packages
-WSGIProcessGroup <%= @params[:project] %>
-WSGIScriptAlias / <%= @params[:docroot] %>/wsgi.py
+WSGIDaemonProcess ckan_default python-path=<%= @params[:docroot] %>:/home/<%= @params[:user] %>/env/lib<%= @params[:python] %>/site-packages
+WSGIProcessGroup ckan_default
+WSGIScriptAlias / <%= @params[:docroot] %>/apache.wsgi
