--- a/templates/default/vhost.conf.erb
+++ b/templates/default/vhost.conf.erb
@@ -15,6 +15,8 @@
         RPAFproxy_ips 127.0.0.1
     </IfModule>
 
+    Alias /health/ <%= @params[:docroot] %>/health.html
+
     <Directory />
         Require all granted
     </Directory>
